--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,15 @@
 
     "latex-workshop.latex.recipes": [
         {
+            "name": "xe->bib->xe->xe",
+            "tools": [
+                "xelatex",
+                "bibtex",
+                "xelatex",
+                "xelatex"
+            ]
+        },
+        {
             "name": "xelatex",
             "tools": [
                 "xelatex"
@@ -52,17 +61,7 @@
                 "pdflatex",
                 "pdflatex"
             ]
-        },
-        {
-            "name": "xe->bib->xe->xe",
-            "tools": [
-                "xelatex",
-                "bibtex",
-                "xelatex",
-                "xelatex"
-            ]
         }
-
     ],
     "latex-workshop.latex.clean.fileTypes": [
         // "*.aux",
@@ -73,6 +72,7 @@
         "*.lof",
         "*.lot",
         "*.out",
+        "*.toc",
         "*.acn",
         "*.acr",
         "*.alg",
